[workspace]
resolver = "2"
members = ["napi", "core", "proxy", "macos_provider", "windows_plugin_authenticator", "autotype", "importer", "bitwarden_bridge", "bitwarden_chrome_reader", "bitwarden_chromium_importer"]

[workspace.package]
version = "0.0.0"
license = "GPL-3.0"
edition = "2021"
publish = false

[workspace.dependencies]
aes = "=0.8.4"
aes-gcm = "=0.10.3"
anyhow = "=1.0.94"
arboard = { version = "=3.6.0", default-features = false }
ashpd = "=0.11.0"
async-trait = "=0.1.88"
base64 = "=0.22.1"
bitwarden-russh = { git = "https://github.com/bitwarden/bitwarden-russh.git", rev = "a641316227227f8777fdf56ac9fa2d6b5f7fe662" }
byteorder = "=1.5.0"
bytes = "=1.10.1"
cbc = "=0.1.2"
chacha20poly1305 = "=0.10.1"
clap = "=4.5.40"
colog = "=1.3.0"
core-foundation = "=0.10.0"
dirs = "=6.0.0"
ed25519 =  "=2.2.3"
embed_plist = "=1.2.2"
env_logger = "=0.11.8"
futures = "=0.3.31"
hex = "=0.4.3"
homedir = "=0.3.4"
interprocess = "=2.2.1"
keytar = "=0.1.6"
libc = "=0.2.172"
log = "=0.4.25"
napi = "=2.16.17"
napi-build = "=2.2.0"
napi-derive = "=2.16.13"
oo7 = "=0.4.3"
oslog = "=0.2.0"
pin-project = "=1.1.10"
pbkdf2 = "=0.12.2"
pkcs8 =  "=0.10.2"
rand = "=0.9.1"
rsa = "=0.9.6"
rusqlite = { version = "=0.35.0" }
russh-cryptovec = "=0.7.3"
scopeguard = "=1.2.0"
security-framework = "=3.1.0"
security-framework-sys = "=2.13.0"
serde = "=1.0.209"
serde_json = "=1.0.127"
sha1 = "=0.10.6"
sha2 = "=0.10.8"
simplelog = "=0.12.2"
ssh-encoding = "=0.2.0"
ssh-key = {version = "=0.6.7", default-features = false }
sysinfo = "=0.35.0"
thiserror = "=2.0.12"
tokio = "=1.45.0"
tokio-stream = "=0.1.15"
tokio-util = "=0.7.13"
typenum = "=1.18.0"
uniffi =  "=0.28.3"
widestring = "=1.2.0"
winapi = "=0.3.9"
windows = "=0.61.1"
windows-core = "=0.61.0"
windows-future = "=0.2.0"
windows-registry = "=0.5.3"
windows-service = "=0.8.0"
zbus = "=5.5.0"
zbus_polkit = "=5.0.0"
zeroizing-alloc = "=0.1.0"
