[package]
name = "bitwarden_bridge"
edition = { workspace = true }
license = { workspace = true }
version = { workspace = true }
publish = { workspace = true }

[features]
windows-binary = []

[dependencies]
aes = { workspace = true }
aes-gcm = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
cbc = { workspace = true, features = ["alloc"] }
hex = { workspace = true }
homedir = { workspace = true }
log = { workspace = true }
pbkdf2 = { workspace = true }
rand = { workspace = true }
rusqlite = { workspace = true, features = ["bundled"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha1 = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
chacha20poly1305 = { workspace = true }
clap = { workspace = true, features = ["derive"] }
colog = { workspace = true }
env_logger = { workspace = true }
tokio = { workspace = true, features = ["full"] }
scopeguard = { workspace = true }
winapi = { workspace = true, features = ["dpapi", "memoryapi"] }
windows = { workspace = true, features = ["Win32_Security", "Win32_Security_Cryptography", "Win32_Storage_FileSystem", "Win32_System_IO", "Win32_System_Memory", "Win32_System_Pipes", "Win32_System_Services", "Win32_System_Threading", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging"] }
windows-service = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
oo7 = { workspace = true }
