[package]
name = "bitwarden_bridge"
edition = { workspace = true }
license = { workspace = true }
version = { workspace = true }
publish = { workspace = true }

[features]
windows-binary = []

[dependencies]
anyhow = { workspace = true }
bitwarden_chromium_importer = { path = "../bitwarden_chromium_importer" }
log = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
clap = { workspace = true, features = ["derive"] }
colog = { workspace = true }
env_logger = { workspace = true }
tokio = { workspace = true, features = ["full"] }
scopeguard = { workspace = true }
windows = { workspace = true, features = ["Win32_Security", "Win32_Security_Cryptography", "Win32_Storage_FileSystem", "Win32_System_IO", "Win32_System_Memory", "Win32_System_Pipes", "Win32_System_Services", "Win32_System_Threading", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging"] }
windows-service = { workspace = true }
