[package]
name = "desktop_core"
edition = { workspace = true }
license = { workspace = true }
version = { workspace = true }
publish = { workspace = true }

[features]
default = [
    "dep:widestring",
    "dep:windows",
    "dep:core-foundation",
    "dep:security-framework",
    "dep:security-framework-sys",
    "dep:zbus",
    "dep:zbus_polkit"
]
manual_test = []

[dependencies]
aes = { workspace = true }
anyhow = { workspace = true }
arboard = { workspace = true, features = ["wayland-data-control"] }
base64 = { workspace = true }
byteorder = { workspace = true }
env_logger = "*"
bytes = { workspace = true }
cbc = { workspace = true, features = ["alloc"] }
dirs = { workspace = true }
ed25519 = { workspace = true, features = ["pkcs8"] }
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
futures = { workspace = true }
homedir = { workspace = true }
interprocess = { workspace = true, features = ["tokio"] }
log = { workspace = true }
num_enum = "0.7.4"
pin-project = { workspace = true }
pkcs8 = { workspace = true, features = ["alloc", "encryption", "pem"] }
rand = { workspace = true }
rsa = { workspace = true, features = ["sha2"] }
russh-cryptovec = { workspace = true }
scopeguard = { workspace = true }
sha1 = { version = "0.10.6", features = ["oid"] }
secmem-proc = { workspace = true }
ssh-encoding = { workspace = true }
ssh-key = { workspace = true, features = [
    "encryption",
    "ed25519",
    "rsa",
    "ecdsa",
    "getrandom",
] }
sysinfo = { workspace = true, features = ["windows"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["io-util", "sync", "macros", "net"] }
tokio-stream = { workspace = true, features = ["net"] }
tokio-util = { workspace = true, features = ["codec"] }
tracing = { workspace = true }
typenum = { workspace = true }
zeroizing-alloc = { workspace = true }
signature = "3.0.0-rc.4"
tracing-subscriber.workspace = true
test-env-log = "0.2.8"
test-log = { version = "0.2.18", features = ["trace"] }
p256 = "0.13.2"
p384 = "0.13.1"
p521 = "0.13.3"
sha2 = "0.10.9"

[target.'cfg(windows)'.dependencies]
widestring = { workspace = true, optional = true }
windows = { workspace = true, features = [
    "Foundation",
    "Security_Credentials_UI",
    "Security_Cryptography",
    "Storage_Streams",
    "Win32_Foundation",
    "Win32_Security_Credentials",
    "Win32_System_WinRT",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Pipes",
], optional = true }
windows-future = { workspace = true }

[target.'cfg(windows)'.dev-dependencies]
keytar = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = { workspace = true, optional = true }
security-framework = { workspace = true, optional = true }
security-framework-sys = { workspace = true, optional = true }
desktop_objc = { path = "../objc" }

[target.'cfg(target_os = "linux")'.dependencies]
oo7 = { workspace = true }
libc = { workspace = true }
ashpd = { workspace = true }

zbus = { workspace = true, optional = true }
zbus_polkit = { workspace = true, optional = true }

[lints]
workspace = true
