[package]
name = "fido2_client"
edition = { workspace = true }
license = { workspace = true }
version = { workspace = true }
publish = { workspace = true }

[dependencies]
base64.workspace = true
ctap-hid-fido2 = "3.5.1"
pinentry = "0.5.0"
home = "=0.5.0"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
secrecy = "0.8.0"
hex.workspace = true
webauthn-authenticator-rs = { version = "0.5.3", features = ["ctap2", "cable", "usb", "win10"] }
tokio.workspace = true
futures-util = "0.3.31"
sha2 = { workspace = true }
webauthn-rs-proto = { path = "../../../../../webauthn-rs/webauthn-rs-proto" }
base64urlsafedata = { path= "../../../../../webauthn-rs/base64urlsafedata" }
windows = { version = "=0.52.0", features = [
    "Win32_Graphics_Gdi",
    "Win32_Networking_WindowsWebServices",
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_Graphics_Dwm",
]}

