[package]
name = "windows_plugin_authenticator"
version = "0.0.0"
edition = "2021"
license = "GPL-3.0"
publish = false

[target.'cfg(target_os = "windows")'.build-dependencies]
bindgen = "0.71.1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.59.0", features = ["Win32_Foundation", "Win32_Security", "Win32_System_Com" ] }
windows-core = "0.59.0"
# windows-sys = { version = "0.59.0", features = ["Win32_Security"] }
