[package]
name = "windows_plugin_authenticator"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }

[target.'cfg(target_os = "windows")'.build-dependencies]
bindgen = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.59.0", features = ["Win32_Foundation", "Win32_Security", "Win32_System_Com", "Win32_System_LibraryLoader" ] }
windows-core = "0.59.0"
hex = { workspace = true }
